# fre-workflows

./: .coveragerc  .cylcignore  .gitignore  .gitmodules  MR108_README.md  MR108_regrid_rose_app  MR108_remap_pp_rose_app  README-developers.md  README-portability.md  README-portability.mdown  README.am5.md  README.md  README_using_fre-cli.md  am5_c96L33_amip_job_stage-history  am5_c96L33_amip_job_stage-history.tags  check_history_timelevels.py  cleanuptimavgenv.sh  environment.yml  example.yaml  flow.cylc  for-developers.md  frecli-instructions.md  iterate_stop_install_play.sh  notes  old_README.md  portability-instructions.md  portable-post-processing.md  pp.yaml  pylintrc  pyproject.toml  pytest.ini  rose-suite.conf  runscript.sh  setup.py  setupenv_MR126.sh  setuptimavgenv.sh  suite.rc  test.yaml  test_papiex_tags_with_bash_if.bash  test_tooling_ops.sh  (+3 more)
.github/: copilot-instructions.md  pull_request_template.md
Jinja2Filters/: add_date_and_duration.py  add_date_and_durations.py  add_durations.py  divide_durations.py  form_analysis_tasks.py  form_remap_dep.py  form_remap_dep_test.py  form_task_parameter_components.py  form_task_parameters.py  form_task_parameters_2.py  form_task_parameters_test.py  get_analysis_info.py  get_climatology_info.py  get_components.py  get_components_test.py  get_offline_sources.py  get_variables.py  iter_chunks.py  iter_chunks_test.py  legacy_date_conversions.py  multiply_duration.py  subtract_dates.py  subtract_durations.py  subtract_durations_test.py  tool_ops_w_papiex.py
data-lineage/: dag_create.py  fetch.py  init_blockdag.py  (+1 more)
(+314 files in other folders)
